--- a/cer/package.json
+++ b/cer/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
