--- a/cer/package.json
+++ b/cer/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
