--- a/cer/package.json
+++ b/cer/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
+    "react-paginate": "^8.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "sweetalert2": "^11.7.5"
