--- a/cer/package.json
+++ b/cer/package.json
@@ -17,10 +17,15 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.13.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.3.0",
     "react-redux": "^8.0.5",
