--- a/cer/package.json
+++ b/cer/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.13.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
