feat: env fix + version node 22

--- a/cer/.env.example
+++ b/cer/.env.example
@@ -1,3 +1,2 @@
-GATEWAY_CER=http://localhost:5144/
-PUBLICKEY_MERCADOPAGO=TEST-ace76d8d-4c34-4ac7-aa9c-e045d70a3260
-
+VITE_GATEWAY_CER=http://localhost:5144/
+VITE_PUBLICKEY_MERCADOPAGO=TEST-ace76d8d-4c34-4ac7-aa9c-e045d70a3260
