--- a/cer/package.json
+++ b/cer/package.json
@@ -43,5 +43,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "rollup-plugin-svg": "^2.0.0",
     "vite": "^4.3.2"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
